kubernetes/old_reference_only/production-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    'kubernetes.io/ingress.class': nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '60'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
  name: ingress-mowdirect
  namespace: mowdirect
spec:
  tls:
    - hosts:
        - www.mowdirect.co.uk
        - www.chipperfield.co.uk
        - agri-fab-direct.co.uk
        - www.energizer-tools.com
        - www.capitools.co.uk
      secretName: production-mowdirect-tls
  rules:
    - host: mowdirect.co.uk
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: "www.mowdirect.co.uk"
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: chipperfield.co.uk
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: "www.chipperfield.co.uk"
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: energizer-tools.com
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: "www.energizer-tools.com"
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: capitools.co.uk
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: "www.capitools.co.uk"
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: agri-fab-direct.co.uk
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
    - host: "www.agri-fab-direct.co.uk"
      http:
        paths:
          - backend:
              serviceName: phpfpm
              servicePort: 80
            path: /
